--- a/public/css/style-ar.css
+++ b/public/css/style-ar.css
@@ -809,7 +809,8 @@
 
 @media (max-width: 479px) {
 
-  .app-table td.app-table__avatar:first-of-type {
+  .app-table td.app-table__avatar:first-of-type,
+  .app-table td.app-table__avatar {
     padding-left: 4px;
   }
 
