--- a/public/index.ejs
+++ b/public/index.ejs
@@ -56,7 +56,10 @@
     <body>
 
         <div ng-show="loading" class="app-loading">
-            <div ng-hide="disconnectMultiSocket || unauthorized" class="app-loader mdl-progress mdl-js-progress mdl-progress__indeterminate"></div>
+            <div ng-hide="disconnectMultiSocket || unauthorized || !ready" 
+                 class="app-loader mdl-progress mdl-js-progress mdl-progress__indeterminate">
+            </div>
+            <div ng-show="!ready" class="app-init"></div>
             <i ng-show="disconnectMultiSocket" 
                 ng-click="reconnect()"
                 ng-bind="'play_arrow'"
