--- a/public/index.ejs
+++ b/public/index.ejs
@@ -55,9 +55,10 @@
     </head>
     <body>
 
-        <div ng-show="loading" class="app-loading">
+        <div ng-show="!connected || loading || disconnectMultiSocket || unauthorized" 
+             class="app-overlay">
             <div ng-show="!connected" class="app-init"></div>
-            <div ng-hide="disconnectMultiSocket || unauthorized || !connected" 
+            <div ng-show="loading" 
                  class="app-loader mdl-progress mdl-js-progress mdl-progress__indeterminate ng-hide">
             </div>
             <i ng-show="disconnectMultiSocket" 
