--- a/public/css/style-ar.css
+++ b/public/css/style-ar.css
@@ -328,6 +328,15 @@
   left: 16px;
 }
 
+.app-profile__action .app-button {
+  margin-left: 4px;
+  margin-right: 0;
+}
+
+.app-profile__action .app-button:last-child {
+  margin-left: 0;
+}
+
 .app-profile__card-avatar {
   left: initial;
   right: 24px;
