--- a/public/index.ejs
+++ b/public/index.ejs
@@ -67,7 +67,7 @@
                 class="app__clickable app__no-select app__action material-icons ng-hide">
             </i>
             <i ng-show="unauthorized"
-               ng-bind="'remove_circle'" 
+               ng-bind="'block'" 
                class="app__action material-icons ng-hide">
             </i>
         </div>
