--- a/public/app/profile/templates/profile-actions.html
+++ b/public/app/profile/templates/profile-actions.html
@@ -10,6 +10,6 @@
             ng-click="toogleFavorite()"
             class="app-button mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab">
         <i ng-if="!isFavorite" class="app-icon app-icon--favorite material-icons">star</i>
-        <i ng-if="isFavorite" class="app-icon app-icon--favorite-selected material-icons">star</i>
+        <i ng-if="isFriend || isFavorite" class="app-icon app-icon--favorite-selected material-icons">star</i>
     </button>
 </div>
