fix app profile card css

--- a/public/app/home/templates/home.html
+++ b/public/app/home/templates/home.html
@@ -210,7 +210,7 @@
             <div class="app-profile__card-avatar">
                 <img avatar class="app-avatar app-profile__avatar" ng-src="{{ challenger.avatar }}">
             </div>
-            {{ challenger.name }}
+            <div class="app-profile__card-name">{{ challenger.name }}</div>
         </div>
         <div class="app-modal__content">
             <div class="app-profile app-profile--challenger">
