--- a/public/css/style-ar.css
+++ b/public/css/style-ar.css
@@ -879,7 +879,7 @@
     margin-right: 0;
   }
   
-  .app-game__lost-pieces {
+  .app-profile--game .app-game__lost-pieces {
     float: none;
     direction: rtl;
   }
