--- a/public/css/style.css
+++ b/public/css/style.css
@@ -781,8 +781,13 @@ a {
   border-bottom: 4px solid transparent;
 }
 
+.app-navigation .mdl-navigation__link:hover,
 .app-navigation .mdl-navigation__link.selected {
-  border-bottom: 4px solid #fff;
+  border-bottom: 4px solid #fff
+}
+
+.app-navigation .mdl-navigation__link:hover ~ .selected {
+  border-bottom: 4px solid transparent;
 }
 
 .app-navigation__profile {
