--- a/public/css/style.css
+++ b/public/css/style.css
@@ -777,7 +777,7 @@ a {
   display: inline-block;
   height: 60px;
   line-height: 68px;
-  background-color: transparent !important;
+  background-color: transparent;
   border-bottom: 4px solid transparent;
 }
 
