--- a/public/index.ejs
+++ b/public/index.ejs
@@ -166,7 +166,7 @@
                                          class="app-avatar app-avatar--navigation" 
                                          ng-src="{{ user.avatar }}">
                                 </a>
-                            </a>
+                            </div>
                         </nav>
                     </div>
                     <div class="app-header__mobile">
