--- a/public/index.ejs
+++ b/public/index.ejs
@@ -264,6 +264,7 @@
                     <div class="mdl-spinner mdl-js-spinner is-active"></div>
                 </div>
                 <a name="top"></a>
+                <div id="ad-header" ng-hide="user.gid"></div>
                 <div class="app-grid mdl-grid" ng-if="ready" ng-view></div>
                 <footer class="app-footer">
                     <a id="fanpage" href="https://www.facebook.com/ChessCommunity" target="_blank">{{ 'fanpage' | translate }}</a>
@@ -811,5 +812,8 @@
         <% } else { %>
             <script src="web/js/app.min.js"></script>
         <% } %>
+
+        <script src="//ads.lfstmedia.com/getad?site=287948"></script>
+
     </body>
 </html>
