--- a/public/index.ejs
+++ b/public/index.ejs
@@ -773,10 +773,10 @@
         <script src="lib/angular-route.min.js"></script>
         <script src="lib/angular-cookies.min.js"></script>
         <script src="lib/html2image.min.js"></script>
+        <script src="socket.io/socket.io.js"></script>
+        <script src="timesync/timesync.js"></script>
 
         <% if (typeof env === 'string' && env === 'dev') { %>
-
-            <script src="socket.io/socket.io.js"></script>
 
             <script src="chess.js"></script>
             <script src="utils.js"></script>
