--- a/public/index.ejs
+++ b/public/index.ejs
@@ -765,6 +765,7 @@
         <div id="fb-root"></div>
 
         <script src="https://apis.google.com/js/api.js"></script>
+        <script src="https://vk.com/js/api/openapi.js"></script>
         <script src="lib/jquery.min.js"></script>
         <script src="lib/jquery-ui.min.js"></script>
         <script src="lib/progress-bar.min.js"></script>
