--- a/public/css/style.css
+++ b/public/css/style.css
@@ -139,10 +139,6 @@ a {
   border-radius: 24px;
 }
 
-.app-login__content-button {
-  display: inline;
-}
-
 .app-login__button {
   cursor: pointer;
   box-sizing: border-box;
@@ -155,6 +151,7 @@ a {
   white-space: nowrap;
   border-radius: 0.2em;
   font-size: 16px;
+  width: 100%;
   color: #FFF;
 }
 
@@ -193,7 +190,6 @@ a {
   background-image: linear-gradient(#5B7BD5, #4864B1);
 }
 
-
 .app-login__button--google {
   background: #DD4B39;
 }
@@ -206,6 +202,21 @@ a {
 .app-login__button--google:hover,
 .app-login__button--google:focus {
   background: #E74B37;
+}
+
+.app-login__button--vkontakte {
+  background: #587ea3;
+}
+
+.app-login__button--vkontakte:before {
+  border-right: #BB3F30 1px solid;
+  background: url('/images/icon_vkontakte.svg') 5px 5px no-repeat;
+  background-size: 24px 24px;
+}
+
+.app-login__button--vkontakte:hover,
+.app-login__button--vkontakte:focus {
+  background: #466482;
 }
 
 .app-share {
@@ -675,7 +686,7 @@ a {
 
 .app-modal__logo {
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 24px;
 }
 
 .app-logo {
@@ -3660,10 +3671,8 @@ a {
     padding-bottom: 52px;
   }
 
-  .app-login__content-button {
-    text-align: center;
-    display: block;
-    margin-bottom: 5px;
+  .app-modal__logo {
+    margin-bottom: 12px;
   }
 
   .app-login__content-button:last-child {
