fix vk login open api

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -759,9 +759,11 @@
         </div>
           
         <div id="fb-root"></div>
+        <div id="vk-root"></div>
 
-        <script src="https://apis.google.com/js/api.js"></script>
-        <script src="https://vk.com/js/api/openapi.js"></script>
+        <script src="https://apis.google.com/js/api.js" async defer></script>
+        <script src="https://ads.lfstmedia.com/getad?site=287948" defer async></script>
+
         <script src="lib/jquery.min.js"></script>
         <script src="lib/jquery-ui.min.js"></script>
         <script src="lib/progress-bar.min.js"></script>
@@ -810,8 +812,6 @@
         <% } else { %>
             <script src="web/js/app.min.js"></script>
         <% } %>
-
-        <script src="//ads.lfstmedia.com/getad?site=287948"></script>
 
     </body>
 </html>
