--- a/public/index.ejs
+++ b/public/index.ejs
@@ -3,6 +3,7 @@
       ng-app="app"
       data-facebook="<%= facebook %>"
       data-vkontakte="<%= vkontakte ? JSON.stringify(vkontakte) : false %>"
+      data-okru="<%= okru ? JSON.stringify(okru) : false %>"
       data-env="<%= typeof env === 'string' ? env : null %>">
     <head>
         <meta charset="utf-8">
@@ -768,6 +769,9 @@
             <div id="vk-root"></div>
         <% } %>
 
+        <% if (okru) { %>
+            <script src="https://api.ok.ru/js/fapi5.js" async defer></script>
+        <% } %>
 
         <script src="https://apis.google.com/js/api.js" async defer></script>
         <script src="https://ads.lfstmedia.com/getad?site=287948" async defer></script>
@@ -796,6 +800,8 @@
             <script src="app/google/google.module.js"></script>
 
             <script src="app/vkontakte/vkontakte.module.js"></script>
+
+            <script src="app/okru/okru.module.js"></script>
 
             <script src="app/components/components.module.js"></script>
             <script src="app/components/components.services.js"></script>
