--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2867,13 +2867,17 @@ a {
     width: 100%;
   }
 
+  .app-header .app-logo__text {
+    display: none;
+  }
+
   .app-button--create-game {
     margin: 0 20px 0 0;
     padding: 0 8px;
   }
 
   .app-navigation__container {
-    width: 628px;
+    width: 720px;
   }
 
   .app-header__row .app-navigation__link {
