--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2867,10 +2867,6 @@ a {
     width: 100%;
   }
 
-  .app-header .app-logo__text {
-    display: none;
-  }
-
   .app-button--create-game {
     margin: 0 20px 0 0;
     padding: 0 8px;
@@ -2880,8 +2876,10 @@ a {
     width: 720px;
   }
 
-  .app-header__row .app-navigation__link {
-    padding: 0 12px;
+  @media (max-width: 960px) {
+    .app-header .app-logo__text {
+      display: none;
+    }
   }
 }
 
