--- a/public/index.ejs
+++ b/public/index.ejs
@@ -11,18 +11,19 @@
         <meta name="description" content="<%= description %>">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
-        <meta property="og:url" content="https://www.worldofchess.online/<%= lang %>/"/>
+        <meta property="og:type" content="article">
+        <meta property="og:url" content="https://www.worldofchess.online<%= path %>"/>
         <meta property="og:locale" content="<%= lang %>" />
         <meta property="og:title" content="<%= title %> - World of Chess" />
         <meta property="og:description" content="<%= description %>" />
-        <meta property="og:image" content="https://www.worldofchess.online/images/logo.png" />
+        <meta property="og:image" content="https://www.worldofchess.online/images/<%= image %>" />
         <meta property="fb:app_id" content="1687859708170830" />
 
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@WorldOfChess_" />
         <meta name="twitter:title" content="<%= title %> - World of Chess" />
         <meta name="twitter:description" content="<%= description %>" />
-        <meta name="twitter:image" content="https://www.worldofchess.online/images/logo.png" />
+        <meta name="twitter:image" content="https://www.worldofchess.online/images/<%= image %>" />
 
         <meta name="theme-color" content="#795548" />
 
