--- a/public/app/profile/templates/profile-header.html
+++ b/public/app/profile/templates/profile-header.html
@@ -7,21 +7,21 @@
 </div>
 <div class="app-card__profile-actions mdl-card__actions mdl-card--border">
 
-    <a href="{{ uid }}/blitz"
+    <a href="user/{{ uid }}/blitz"
        class="app-button mdl-button mdl-js-button"
        ng-class="{'is-active': activeMenu === 'blitz'}">
         {{ 'blitz' | translate }}
     </a>
 
-    <a href="{{ uid }}/rapid"
+    <a href="user/{{ uid }}/rapid"
        class="app-button mdl-button mdl-js-button"
        ng-class="{'is-active': activeMenu === 'rapid'}">
         {{ 'rapid' | translate }}
     </a>
 
-    <a href="{{ uid }}/trophies"
+    <a href="user/{{ uid }}/trophies"
        class="app-button mdl-button mdl-js-button"
        ng-class="{'is-active': activeMenu === 'trophies'}">
-        {{ 'rapid' | translate }}
+        {{ 'trophies' | translate }}
     </a>
 </div>
