--- a/public/index.ejs
+++ b/public/index.ejs
@@ -27,7 +27,7 @@
 
         <meta name="theme-color" content="#795548" />
 
-        <base href="/">
+        <base href="<%= base %>">
         
         <title><%= title %> - World of Chess</title>
 
@@ -48,15 +48,15 @@
         <link rel="manifest" href="/manifest.json">
 
         <!-- Page styles -->
-        <link href="css/material/material.min.css" rel="stylesheet">
+        <link href="/css/material/material.min.css" rel="stylesheet">
 
         <% if (typeof env === 'string' && env === 'dev') { %>
-            <link href="css/material/icon.css" rel="stylesheet" >
-            <link href="css/style.css" rel="stylesheet">
-            <link ng-if="lang === 'ar'" href="css/style-ar.css" rel="stylesheet">
+            <link href="/css/material/icon.css" rel="stylesheet" >
+            <link href="/css/style.css" rel="stylesheet">
+            <link ng-if="lang === 'ar'" href="/css/style-ar.css" rel="stylesheet">
          <% } else { %>
-            <link href="web/css/app.min.css" rel="stylesheet">
-            <link ng-if="lang === 'ar'" ng-href="web/css/app-ar.min.css" rel="stylesheet">
+            <link href="/web/css/app.min.css" rel="stylesheet">
+            <link ng-if="lang === 'ar'" ng-href="/web/css/app-ar.min.css" rel="stylesheet">
         <% } %>
     </head>
     <body>
@@ -359,7 +359,7 @@
                                 data-game-box>
                                 <div class="app-game__box-content">
                                     <span ng-if="game.data.pieces[position]" class="app-game__piece">
-                                        <img ng-src="../images/game-1/{{ game.data.pieces[position].name }}-{{ game.data.pieces[position].color }}.svg"
+                                        <img ng-src="/images/game-1/{{ game.data.pieces[position].name }}-{{ game.data.pieces[position].color }}.svg"
                                              class="app-game__piece-image app__no-drag">
                                     </span>
                                 </div>
@@ -633,7 +633,7 @@
                                          ng-class="{'no-trophy': trophy < 100 }"
                                          id="trophy-{{ $index }}"
                                          class="app-profile__trophy">
-                                        <img ng-src="../images/trophies/trophy-{{ $index + 1 }}.svg">
+                                        <img ng-src="/images/trophies/trophy-{{ $index + 1 }}.svg">
                                         <div class="mdl-tooltip mdl-tooltip--top" data-mdl-for="trophy-{{ $index }}">
                                             {{ 'trophies.content.' + ($index + 1) + '.title' | translate }} 
                                             · 
@@ -664,7 +664,7 @@
                         <div class="app-modal__content">
                             <div class="app-trophy app-trophy--modal">
                                 <div class="app-trophy__picture">
-                                    <img ng-if="trophy.value === 100" ng-src="../images/trophies/trophy-{{ trophy.id }}.svg">
+                                    <img ng-if="trophy.value === 100" ng-src="/images/trophies/trophy-{{ trophy.id }}.svg">
                                     <div ng-if="trophy.value !== 100"
                                          id="progress-bar"
                                          progress-bar-trophy="trophy.value"
@@ -784,55 +784,55 @@
 
         <script src="https://apis.google.com/js/api.js" async defer></script>
 
-        <script src="lib/jquery.min.js"></script>
-        <script src="lib/jquery-ui.min.js"></script>
-        <script src="lib/progress-bar.min.js"></script>
-        <script src="lib/material.min.js"></script>
-        <script src="lib/angular.min.js"></script>
-        <script src="lib/angular-route.min.js"></script>
-        <script src="lib/angular-cookies.min.js"></script>
-        <script src="lib/html2image.min.js"></script>
-        <script src="socket.io/socket.io.js"></script>
-        <script src="timesync/timesync.js"></script>
+        <script src="/lib/jquery.min.js"></script>
+        <script src="/lib/jquery-ui.min.js"></script>
+        <script src="/lib/progress-bar.min.js"></script>
+        <script src="/lib/material.min.js"></script>
+        <script src="/lib/angular.min.js"></script>
+        <script src="/lib/angular-route.min.js"></script>
+        <script src="/lib/angular-cookies.min.js"></script>
+        <script src="/lib/html2image.min.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="/timesync/timesync.js"></script>
 
         <% if (typeof env === 'string' && env === 'dev') { %>
 
-            <script src="chess.js"></script>
+            <script src="/chess.js"></script>
 
-            <script src="app/app.js"></script>
+            <script src="/app/app.js"></script>
 
-            <script src="app/global/global.module.js"></script>
+            <script src="/app/global/global.module.js"></script>
 
-            <script src="app/facebook/facebook.module.js"></script>
+            <script src="/app/facebook/facebook.module.js"></script>
 
-            <script src="app/google/google.module.js"></script>
+            <script src="/app/google/google.module.js"></script>
 
-            <script src="app/vkontakte/vkontakte.module.js"></script>
+            <script src="/app/vkontakte/vkontakte.module.js"></script>
 
-            <script src="app/okru/okru.module.js"></script>
+            <script src="/app/okru/okru.module.js"></script>
 
-            <script src="app/components/components.module.js"></script>
-            <script src="app/components/components.services.js"></script>
-            <script src="app/components/components.directives.js"></script>
+            <script src="/app/components/components.module.js"></script>
+            <script src="/app/components/components.services.js"></script>
+            <script src="/app/components/components.directives.js"></script>
 
-            <script src="app/game/game.module.js"></script>
-            <script src="app/game/game.controllers.js"></script>
-            <script src="app/game/game.directives.js"></script>
+            <script src="/app/game/game.module.js"></script>
+            <script src="/app/game/game.controllers.js"></script>
+            <script src="/app/game/game.directives.js"></script>
 
-            <script src="app/home/home.module.js"></script>
-            <script src="app/home/home.controllers.js"></script>
+            <script src="/app/home/home.module.js"></script>
+            <script src="/app/home/home.controllers.js"></script>
 
-            <script src="app/ranking/ranking.module.js"></script>
-            <script src="app/ranking/ranking.controllers.js"></script>
+            <script src="/app/ranking/ranking.module.js"></script>
+            <script src="/app/ranking/ranking.controllers.js"></script>
 
-            <script src="app/trophies/trophies.module.js"></script>
-            <script src="app/trophies/trophies.controllers.js"></script>
+            <script src="/app/trophies/trophies.module.js"></script>
+            <script src="/app/trophies/trophies.controllers.js"></script>
 
-            <script src="app/profile/profile.module.js"></script>
-            <script src="app/profile/profile.controllers.js"></script>
+            <script src="/app/profile/profile.module.js"></script>
+            <script src="/app/profile/profile.controllers.js"></script>
 
         <% } else { %>
-            <script src="web/js/app.min.js"></script>
+            <script src="/web/js/app.min.js"></script>
         <% } %>
 
     </body>
