--- a/public/app/profile/templates/profile-game.html
+++ b/public/app/profile/templates/profile-game.html
@@ -12,7 +12,7 @@
             </div>
         </div>
         <a ng-if="showMore" 
-           ng-href="/profile/{{ uid }}/#{{ gameType }}"
+           ng-href="/user/{{ uid }}/{{ gameType }}"
            class="app-profile__info-more">
             <i class="material-icons">open_in_new</i>
         </a>
